Updated function on time

--- a/Index.html
+++ b/Index.html
@@ -33,15 +33,17 @@
         <div class="col1">
           <h1 id="city">Hong Kong</h1>
           <h6 id="info-one">
-            <span class="date-clock">Day 00:00</span>,
-            <span class="mood" id="mood">Mood</span>
+            Last updated: <span class="date-clock"></span><br />
+            <span class="mood" id="mood"></span>
           </h6>
           <h6 id="info-two">
-            <span class="humid"> Humidity: Number</span>,
-            <span class="blow">Wind: Numero</span>
+            Humidity: <span class="humid"></span>, Wind:
+            <span class="blow"></span>
           </h6>
         </div>
-        <div class="col2"><span class="temp">28°C</span></div>
+        <div class="col2">
+          <span class="temp"></span>°C | <a href="#">°F</a>
+        </div>
       </div>
     </div>
     <script src="src/script.js"></script>
