Added Weather Icon

--- a/Index.html
+++ b/Index.html
@@ -42,7 +42,10 @@
           </h6>
         </div>
         <div class="col2">
-          <span class="temp"></span>°C | <a href="#">°F</a>
+          <img src="" alt="Clear" id="weather-image" class="float-left" />
+          <span class="temp"> </span
+          ><a href="#" id="celsius-temp" class="active">°C</a> |
+          <a href="#" id="fahrenheit-temp">°F</a>
         </div>
       </div>
     </div>
