Added conversion function

--- a/Index.html
+++ b/Index.html
@@ -44,8 +44,8 @@
         <div class="col2">
           <img src="" alt="Clear" id="weather-image" class="float-left" />
           <span class="temp"> </span
-          ><a href="#" id="celsius-temp" class="active">°C</a> |
-          <a href="#" id="fahrenheit-temp">°F</a>
+          ><a href="#" id="celsius-link" class="active">°C</a> |
+          <a href="#" id="fahrenheit-link">°F</a>
         </div>
       </div>
     </div>
