--- a/Index.html
+++ b/Index.html
@@ -67,17 +67,8 @@
           <a href="#" id="celsius-link" class="active">°C</a> |
           <a href="#" id="fahrenheit-link">°F</a>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-2">
-          <div class="weather-forecast-date">Thu</div>
-          <img src="http://openweathermap.org/img/wn/50d@2x.png" alt="" width="42"/>
-          <div class="weather-forecast-temperatures">
-            <span class="weather-forecast-temperature-max">18°</span>
-            <span class="weather-forecast-temperature-min">12°</span>
-            </div>
-          </div>
-        </div>
+      </div><br/>
+      <div class="weather-forecast" id="forecast">
       </div>
       </p>
     </div>
