removed Fahrenheit function

--- a/Index.html
+++ b/Index.html
@@ -63,9 +63,7 @@
         </div>
         <div class="col2">
           <img src="" alt="Clear" id="weather-image" class="float-left" />
-<span class="temp"> </span>
-          <a href="#" id="celsius-link" class="active">°C</a> |
-          <a href="#" id="fahrenheit-link">°F</a>
+<span class="temp"> </span> °C
         </div>
       </div><br/>
       <div class="weather-forecast" id="forecast">
